Header : fixed the display bug on mobile + remove overflow-x in technologies

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -351,7 +351,7 @@ p {
     position: fixed;
     z-index: -1;
     top: 3rem;
-    left: 0;
+    right: 0;
     height: 500px;
     width: 100%;
     background-color: #f5f5f5;
@@ -360,10 +360,9 @@ p {
 }
 
 .menu-mobile-close {
-    position: fixed;
+    display: none;
     z-index: -1;
     top: 3rem;
-    right: 0;
     height: 100%;
     width: 100%;
     background-color: #f5f5f5;
